# book-manager

./: LICENSE  create.py  pyproject.toml
src/: main.py
src/book_manager/: __init__.py  config.py  main.py
src/book_manager/core/: library_manager.py  pdf_manager.py
src/book_manager/database/: db_manager.py  models.py
src/book_manager/gui/: __init__.py  library_view.py  main_window.py  pdf_viewer.py
src/book_manager/utils/: file_utils.py  pdf_utils.py
src/config/: app_config.py  settings_manager.py
src/controllers/: __init__.py  book_controller.py  category_controller.py  context_menu_controller.py  import_controller.py  library_controller.py  reader_controller.py  search_controller.py  series_controller.py
src/models/: __init__.py  book.py  database.py  series.py
src/repositories/: __init__.py  base_repository.py  book_repository.py  category_repository.py  series_repository.py
src/utils/: exceptions.py  file_utils.py  sort_utils.py  styles.py  theme.py  ui_utils.py  view_utils.py
src/viewmodels/: book_viewmodel.py  search_viewmode.py  series_viewmodel.py
src/views/: __init__.py  batch_metadata_editor.py  library_view.py  main_window.py  metadata_editor.py  reader_view.py  series_editor.py  series_view.py
src/views/base/: __init__.py  base_grid_view.py  base_item_widget.py  base_list_view.py  base_view.py  item_view.py
src/views/components/: book_grid_view.py  bool_list_view.py  filter_panel.py  grid_item_widget.py  list_item_widget.py  search_panel.py
src/views/controllers/: library_view_controller.py  menu_controller.py  (+1 more)
(+13 files in other folders)
