[project]
name = "book-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pyqt6>=6.8.1",
    "sqlalchemy>=2.0.38",
    "pymupdf>=1.25.3",
    "pillow>=11.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
